# hifi

./: .gitignore  README.md
assignment-client/: CMakeLists.txt
assignment-client/src/audio/: AudioMixer.cpp  AudioMixerClientData.cpp  AudioMixerClientData.h
assignment-client/src/scripts/: EntityScriptServer.cpp
interface/: CMakeLists.txt
interface/src/: Application.cpp  Menu.cpp  Menu.h
interface/src/avatar/: MyAvatar.cpp  MyAvatar.h
interface/src/scripting/: ScreenshareScriptingInterface.cpp  ScreenshareScriptingInterface.h
libraries/avatars/src/: AvatarData.h
libraries/entities/src/: EntityScriptingInterface.cpp  EntityScriptingInterface.h
libraries/networking/src/: NodeList.cpp  NodeList.h
libraries/script-engine/src/: UsersScriptingInterface.cpp  UsersScriptingInterface.h
screenshare/: .gitignore  CMakeLists.txt  package-lock.json  package.json  packager.js
screenshare/screenshare-win32-x64/: LICENSES.chromium.html
screenshare/screenshare-win32-x64/resources/app/: CMakeLists.txt  output.txt
screenshare/screenshare-win32-x64/resources/app/src/: app.js  index.html  styles.css
screenshare/src/: app.js  image-picker.css  index.html  main.js  styles.css
scripts/: defaultScripts.js  simplifiedUIBootstrapper.js
scripts/modules/: initAudioGainLevels.js
scripts/system/: avatarapp.js
scripts/tests/: ScriptOverlayTest.js
server-console/: .gitignore  CMakeLists.txt  package.json  packager.js
server-console/mvDebug/: package.json
tools/jsdoc/: config_md-mod.json  convertJSDoc2Markdown.js  gravPrep.js  package.json
(+19 files in other folders)
